<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Work Interruption</string>
    <string name="action_list">Settings</string>
    <string name="work">Work</string>
    <string name="work_break">Break</string>
    <string name="meeting">Meeting</string>
    <string name="interrupt">Interrupt</string>
    <string name="status_stopped">Stopped</string>
    <string name="status_active">Active</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_delete">delete</string>

</resources>
