<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

    <Switch
            android:id="@+id/work_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:switchMinWidth="250dp"
            android:textOn="@string/status_active"
            android:textOff="@string/status_stopped"
            android:thumb="@drawable/ic_launcher"
            android:track="@drawable/ic_launcher"
            android:text="@string/work" />

    <Switch
            android:id="@+id/break_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:switchMinWidth="250dp"
            android:textOn="@string/status_active"
            android:textOff="@string/status_stopped"
            android:thumb="@drawable/ic_launcher"
            android:track="@drawable/ic_launcher"
            android:text="@string/work_break" />

    <Switch
            android:id="@+id/meeting_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:switchMinWidth="250dp"
            android:textOn="@string/status_active"
            android:textOff="@string/status_stopped"
            android:thumb="@drawable/ic_launcher"
            android:track="@drawable/ic_launcher"
            android:text="@string/meeting" />

    <Switch
            android:id="@+id/interrupt_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:switchMinWidth="250dp"
            android:textOn="@string/status_active"
            android:textOff="@string/status_stopped"
            android:thumb="@drawable/ic_launcher"
            android:track="@drawable/ic_launcher"
            android:text="@string/interrupt" />



</LinearLayout>
